Added Q + Minor fixes
Added "select visible + similar" (Q).
Reordered things a bit.
Few minor fixes.

--- a/language/de/interface.json
+++ b/language/de/interface.json
@@ -394,8 +394,10 @@
 				"removeAutoGroup": "Einheitstyp aus Autogruppe entfernen",
 				"groupKey": "(Nummer)",
 				"group": "Alle der Gruppe (Nummer) zugewiesenen Einheiten auswählen",
-				"sameTypeKey": "STRG + Y",
-				"sameType": "Alle Einheiten des selben Typs wie die Ausgewählte auswählen"
+				"sameTypeAllKey": "STRG + Y",
+				"sameTypeAll": "Alle Einheiten des selben Typs wie die Ausgewählte auswählen",
+				"sameTypeOnscreenKey": "TranslateMe",
+				"sameTypeOnscreen": "TranslateMe"
 			},
 			"drawing": {
 				"title": "Zeichnen",
