--- a/language/en/units.json
+++ b/language/en/units.json
@@ -645,6 +645,7 @@
 			"cor_hat_viking": "Viking Helmet",
 			"cor_hat_hornet": "Hornet's Tricorn",
 			"cor_hat_ptaq": "PtaQ's Hat",
+			"legbunk": "Pilum",
 			"leegmech": "Praetorian",
 			"legaceb": "Proteus",
 			"legacluster": "Eviscerator",
@@ -1478,6 +1479,7 @@
 			"cor_hat_viking": "A fierce Viking helmet",
 			"cor_hat_hornet": "A weathered yet dapper tricorn",
 			"cor_hat_ptaq": "The finest bonnet in all of Gnomedom",
+			"legbunk": "Jousting Assault Mech",
 			"leegmech": "Armored Assault Mech",
 			"legaceb": "All-Terrain Combat Engineer",
 			"legacluster": "Pop-up Cluster Plasma Artillery",
@@ -1571,7 +1573,7 @@
 			"leglraa": "Long-Range Anti-Air Rail Accelerator",
 			"leglrpc": "Long-Range Cluster Plasma Cannon",
 			"leglupara": "Bomb-Resistant Medium-Range Anti-Air Flak Battery",
-			"legmed": "Heavy Rocket Tank",  
+			"legmed": "Heavy Rocket Tank",
 			"legmex": "Extracts Slightly Reduced Metal and Produces 7 Energy",
 			"legmext15": "Extracts Extra Metal at a High Energy Cost",
 			"legmstor": "Increases Metal Storage (3000)",
