--- a/language/de/interface.json
+++ b/language/de/interface.json
@@ -267,9 +267,6 @@
 			"menus": {
 				"title": "Menüs",
 				"settings": "Einstellungen",
-				"widgetsKey": "F11",
-				"widgets": "Widgetliste",
-				"share": "Einheiten/Ressourcen teilen"
 			},
 			"camera": {
 				"title": "Kamerabewegung",
@@ -319,7 +316,6 @@
 				"title": "Auswahlbefehle",
 				"defaultKey": "(nichts)",
 				"default": "Standardbefehl (meist Bewegen)",
-				"move": "Bewegen",
 				"attack": "Angreifen",
 				"stop": "Stoppen (löscht Befehlswarteschlange)",
 				"repair": "Reparieren",
@@ -348,20 +344,19 @@
 				"append": "Befehl am Ende der Warteschlange anfügen",
 				"appendKey": "Umschalttaste + (irgendein Befehl)",
 				"prependKey": "Leertaste + (irgendein Befehl)",
-				"prepend": "Befehl am Anfang der Warteschlange einfügen"
+				"prepend": "Befehl am Anfang der Warteschlange einfügen",
+				"commandSkipCurrent": "Cancel current order",
+				"commandCancelLast": "Cancel last order"
 			},
 			"buildOrders": {
 				"title": "Bauaufträge auswählen",
 				"selectTileKey": "(Maus)",
 				"selectTile": "Aus Einheitenbaumenü auswählen",
-				"economyKey": "Y",
-				"economy": "Durch Metallextraktoren schalten",
-				"combatKey": "X",
-				"combat": "Durch Energieproduktion schalten",
-				"utilityKey": "C",
-				"utility": "Durch Radar/Verteidigung/etc. schalten",
-				"buildKey": "V",
-				"build": "Durch Fabriken schalten",
+				"categorySelectorKey": "TranslateMe",
+				"categorySelector": "TranslateMe",
+				"buildingSelectorKey": "TranslateMe",
+				"buildingSelector": "TranslateMe",
+				"switchPage": "TranslateMe",
 				"rotateKey": "ü und +",
 				"rotate": "Gebäudeausrichtung ändern"
 			},
@@ -396,8 +391,8 @@
 				"group": "Alle der Gruppe (Nummer) zugewiesenen Einheiten auswählen",
 				"sameTypeAllKey": "STRG + Y",
 				"sameTypeAll": "Alle Einheiten des selben Typs wie die Ausgewählte auswählen",
-				"sameTypeOnscreenKey": "TranslateMe",
-				"sameTypeOnscreen": "TranslateMe"
+				"sameTypeVisibleKey": "TranslateMe",
+				"sameTypeVisible": "TranslateMe"
 			},
 			"drawing": {
 				"title": "Zeichnen",
