--- a/language/en/interface.json
+++ b/language/en/interface.json
@@ -271,9 +271,9 @@
 			"blueprint_place_tooltip": "Place a saved blueprint",
 			"blueprint_create": "Save Blueprint",
 			"blueprint_create_tooltip": "Save the selected units into a new blueprint, in the order they were selected",
-			"factoryqueuemode_normal": "Set Queue",
-			"factoryqueuemode_quota": "Set Quotas",
-			"factoryqueuemode_tooltip": "Set the factory queue or the factory quotas",
+			"factoryqueuemode_normal": "Queue Mode",
+			"factoryqueuemode_quota": "Quota Mode",
+			"factoryqueuemode_tooltip": "Queue: Build each queued unit once\nQuota: Maintain a minimum quota of each unit on the battlefield",
 			"customOnOff": {
 				"lowTrajectory": "Low Trajectory",
 				"highTrajectory": "High Trajectory",
