Legion Camera Created

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1490,6 +1490,7 @@
 			"cor_hat_viking": "A fierce Viking helmet",
 			"cor_hat_hornet": "A weathered yet dapper tricorn",
 			"cor_hat_ptaq": "The finest bonnet in all of Gnomedom",
+			"legeyes": "Perimeter Camera",
 			"leegmech": "Armored Assault Mech",
 			"legaceb": "All-Terrain Combat Engineer",
 			"legacluster": "Pop-up Cluster Plasma Artillery",
