--- a/language/en/units.json
+++ b/language/en/units.json
@@ -648,6 +648,7 @@
 			"cor_hat_viking": "Viking Helmet",
 			"cor_hat_hornet": "Hornet's Tricorn",
 			"cor_hat_ptaq": "PtaQ's Hat",
+			"cor_hat_fightnight": "Champion Glove",
 			"legeyes": "Argus",
 			"leegmech": "Praetorian",
 			"legaceb": "Proteus",
@@ -1490,6 +1491,7 @@
 			"cor_hat_viking": "A fierce Viking helmet",
 			"cor_hat_hornet": "A weathered yet dapper tricorn",
 			"cor_hat_ptaq": "The finest bonnet in all of Gnomedom",
+			"cor_hat_fightnight": "The legendary Fight Night Trophy",
 			"legeyes": "Perimeter Camera",
 			"leegmech": "Armored Assault Mech",
 			"legaceb": "All-Terrain Combat Engineer",
