--- a/language/en/interface.json
+++ b/language/en/interface.json
@@ -865,6 +865,9 @@
 			"transportmaxmass": "transport max mass",
 			"transportmaxsize": "transport max size",
 			"transportcapacity": "transport capacity",
+			"transport": "transport",
+			"light": "light",
+			"heavy": "heavy",
 			"mass": "mass",
 			"footprint": "size",
 			"speed": "speed",
