--- a/language/en/interface.json
+++ b/language/en/interface.json
@@ -866,8 +866,8 @@
 			"transportmaxsize": "transport max size",
 			"transportcapacity": "transport capacity",
 			"transport": "transport",
-			"light": "light",
-			"heavy": "heavy",
+			"light": "Light",
+			"heavy": "Heavy",
 			"mass": "mass",
 			"footprint": "size",
 			"speed": "speed",
