--- a/language/en/interface.json
+++ b/language/en/interface.json
@@ -865,9 +865,8 @@
 			"transportmaxmass": "transport max mass",
 			"transportmaxsize": "transport max size",
 			"transportcapacity": "transport capacity",
-			"transport": "transport",
-			"light": "Light",
-			"heavy": "Heavy",
+			"transport_heavy": "transport %{highlightColor}Heavy",
+			"transport_light": "transport %{highlightColor}Light",
 			"mass": "mass",
 			"footprint": "size",
 			"speed": "speed",
