--- a/language/zh/features.json
+++ b/language/zh/features.json
@@ -1,72 +1,75 @@
 {
     "features": {
-        "names":{
-            "crystaltree1":"水晶树",
-            "pipe5.0":"管子 5.0",
-            "fernStones":"蕨类植物和石头",
-            "fernStone":"蕨类植物和石头",
-            "bush":"丛林",
-            "bushLarge":"大型丛林",
-            "smothtree123dead":"树干",
-            "treePine":"松树",
-            "thermalregulator":"热调节器",
-            "treeFir":"冷杉",
-            "raptor_egg":"蛋",
-            "treeCedar":"雪松树",
-            "metal":"含有金属",
-            "pipe1.0":"管子 1.0",
-            "fern_big":"大蕨",
-            "pipe2.0":"管子 2.0",
-            "pipeline":"管道",
-            "xmascomwreck":"圣诞指挥官的残骸",
-            "pthornclump":"一种非常干燥和易碎的植物",
-            "bushSmall":"小丛林",
-            "geovent":"地热通风口",
-            "pilha_crystal3":"大水晶",
-            "treeBanyan":"万年青",
-            "treeBaobab":"猴面包树",
-            "treeAleppoPine":"阿勒颇松树",
-            "treePalms":"棕榈树丛",
-            "pressurevalve":"压力阀",
-            "armstone":"指挥官墓碑",
-            "mushroomsPurple":"紫色蘑菇",
-            "radardish_1":"卫星天线",
-            "crystals":"水晶",
-            "smothdeadtree1":"枯树",
-            "statueEasterIsland":"复活节岛雕像",
-            "ferns":"蕨类",
-            "treePalm":"棕榈树",
-            "slrockcl1":"岩石群",
-            "energySpire":"能源尖塔",
-            "ancientRocks":"古代岩层",
-            "treeDeciduous":"落叶树",
-            "corstone":"指挥官墓碑",
-            "treePalmetto":"棕榈树",
-            "pipe3.0":"管子 3.0",
-            "mushroomsOrange":"橙色蘑菇",
-            "heap":"碎片",
-            "streetlamp_1":"大型路灯",
-            "industrial_structure_pipes_1":"建筑管线",
-            "crystalSapphire":"蓝宝石水晶",
-            "rock":"岩石",
-            "cactusSanPedro":"柱状仙人掌",
-            "pipe4.0":"管子 4.0",
-            "mushroomsTan":"檀香菇",
-            "regulatorcomplex":"调节器综合体",
-            "tree":"树",
-            "seismicmonitor":"地震监测仪",
-            "geocrack":"Visual Crack for Geovent",
-            "obelisk":"赛特方尖碑",
-            "treeDeadPalms":"死去的棕榈树",
-            "pipe6.0":"管子 6.0",
-            "pilha_crystal2":"中水晶",
-            "powerhouse":"电站",
-            "peyote":"仙人球",
-            "pilha_crystal1":"小水晶",
-            "bushMedium":"中型丛林",
-            "fern":"蕨类",
-            "bushLarger":"巨型丛林",
-            "candycane":"甘蔗"
+        "names": {
+            "armstone": "指挥官墓碑",
+            "corstone": "指挥官墓碑",
+            "ancientRocks": "古代岩层",
+            "bush": "丛林",
+            "bushSmall": "小丛林",
+            "bushMedium": "中型丛林",
+            "bushLarge": "大型丛林",
+            "bushLarger": "巨型丛林",
+            "cactusSanPedro": "柱状仙人掌",
+            "candycane": "甘蔗",
+            "raptor_egg": "蛋",
+            "crystalSapphire": "蓝宝石水晶",
+            "crystals": "水晶",
+            "energySpire": "能源尖塔",
+            "fern_big": "大蕨",
+            "fern": "蕨类",
+            "ferns": "蕨类",
+            "fernStone": "蕨类植物和石头",
+            "fernStones": "蕨类植物和石头",
+            "geocrack": "Visual Crack for Geovent",
+            "geovent": "地热通风口",
+            "heap": "碎片",
+            "metal": "含有金属",
+            "mushroomsOrange": "橙色蘑菇",
+            "mushroomsTan": "檀香菇",
+            "mushroomsPurple": "紫色蘑菇",
+            "obelisk": "赛特方尖碑",
+            "peyote": "仙人球",
+            "crystalSmall": "小水晶",
+            "crystalMedium": "中水晶",
+            "crystalLarge": "大水晶",
+            "pipe1.0": "管子 1.0",
+            "pipe2.0": "管子 2.0",
+            "pipe3.0": "管子 3.0",
+            "pipe4.0": "管子 4.0",
+            "pipe5.0": "管子 5.0",
+            "pipe6.0": "管子 6.0",
+            "pipeline": "管道",
+            "powerhouse": "电站",
+            "industrial_structure_pipes_1": "建筑管线",
+            "pressurevalve": "压力阀",
+            "radardish_1": "卫星天线",
+            "regulatorcomplex": "调节器综合体",
+            "seismicmonitor": "地震监测仪",
+            "thermalregulator": "热调节器",
+            "pthornclump": "一种非常干燥和易碎的植物",
+            "rock": "岩石",
+            "rockBarren": "贫瘠的岩石",
+            "rockMossy": "长满苔藓的岩石",
+            "rockSnowy": "积雪的岩石",
+            "slrockcl1": "岩石群",
+            "statueEasterIsland": "复活节岛雕像",
+            "streetlamp_1": "大型路灯",
+            "tree": "树",
+            "smothtree123dead": "树干",
+            "smothdeadtree1": "枯树",
+            "crystaltree1": "水晶树",
+            "treeAleppoPine": "阿勒颇松树",
+            "treeBanyan": "万年青",
+            "treeBaobab": "猴面包树",
+            "treeCedar": "雪松树",
+            "treeDeciduous": "落叶树",
+            "treeFir": "冷杉",
+            "treePalm": "棕榈树",
+            "treePalms": "棕榈树丛",
+            "treeDeadPalms": "死去的棕榈树",
+            "treePalmetto": "棕榈树",
+            "treePine": "松树",
+            "xmascomwreck": "圣诞指挥官的残骸"
         }
     }
 }
