revise ZH features files
revise ZH features files, translate new word

--- a/language/zh/features.json
+++ b/language/zh/features.json
@@ -10,17 +10,17 @@
             "bushLarge": "大型丛林",
             "bushLarger": "巨型丛林",
             "cactusSanPedro": "柱状仙人掌",
-            "candycane": "甘蔗",
+            "candycane": "糖果手杖",
             "raptor_egg": "蛋",
             "crystalSapphire": "蓝宝石水晶",
             "crystals": "水晶",
             "energySpire": "能源尖塔",
-            "fern_big": "大蕨",
+            "fern_big": "大型蕨类",
             "fern": "蕨类",
             "ferns": "蕨类",
             "fernStone": "蕨类植物和石头",
             "fernStones": "蕨类植物和石头",
-            "geocrack": "Visual Crack for Geovent",
+            "geocrack": "通风管道的可见裂缝",
             "geovent": "地热通风口",
             "heap": "碎片",
             "metal": "含有金属",
@@ -48,9 +48,9 @@
             "thermalregulator": "热调节器",
             "pthornclump": "一种非常干燥和易碎的植物",
             "rock": "岩石",
-            "rockBarren": "Barren Rock",
-            "rockMossy": "Mossy Rock",
-            "rockSnowy": "Snowy Rock",
+            "rockBarren": "光秃的岩石",
+            "rockMossy": "生苔的岩石",
+            "rockSnowy": "覆雪的岩石",
             "slrockcl1": "岩石群",
             "statueEasterIsland": "复活节岛雕像",
             "streetlamp_1": "大型路灯",
