revise ZH units files
revise ZH units files

--- a/language/zh/units.json
+++ b/language/zh/units.json
@@ -96,14 +96,14 @@
       "armdl": "海葵",
       "armdrag": "龙牙",
       "armdrone": "攻击无人机",
-      "armdronecarry": "Nexus",
-      "armdronecarryland": "Nexus Terra",
+      "armdronecarry": "联结级航空母舰",
+      "armdronecarryland": "联结级航空母舰(陆地版)",
       "armdroneold": "攻击无人机",
       "armemp": "瘫痪者",
       "armepoch": "纪元号",
       "armestor": "电力储存",
       "armeyes": "监视者",
-      "armexcalibur": "Excalibur",
+      "armexcalibur": "圣剑级",
       "armfark": "管家",
       "armfast": "风行者",
       "armfatf": "水上瞄准辅助设施",
@@ -141,7 +141,7 @@
       "armhlt": "哨兵",
       "armhp": "气垫船平台",
       "armjam": "保护伞",
-      "armjamt": "鬼祟Pete",
+      "armjamt": "鬼祟者",
       "armjanus": "雅努斯",
       "armjeth": "十字弩",
       "armjuno": "朱诺",
@@ -153,7 +153,7 @@
       "armliche": "巫妖",
       "armlichet4": "史诗级巫妖",
       "armllt": "哨所",
-      "armlship": "Maelstrom",
+      "armlship": "漩涡",
       "armlun": "大块头",
       "armlunchbox": "午餐盒",
       "armmakr": "电力转换器",
@@ -207,7 +207,7 @@
       "armsb": "海啸",
       "armscab": "雨伞",
       "armsd": "示踪器",
-      "armseadragon": "Seadragon",
+      "armseadragon": "海龙",
       "armseap": "海雀",
       "armseer": "先知",
       "armsehak": "地平线",
@@ -218,7 +218,7 @@
       "armsh": "寻觅者",
       "armshltx": "实验性建造平台",
       "armshltxuw": "实验性建造平台",
-      "armshockwave": "Shockwave",
+      "armshockwave": "冲击波",
       "armsilo": "末日审判",
       "armsjam": "百慕大",
       "armsnipe": "狙击手",
@@ -243,7 +243,7 @@
       "armtorps": "鱼雷艇",
       "armtdrone": "深水炸弹无人机",
       "armtship": "队伍",
-      "armtrident": "Trident",
+      "armtrident": "三叉戟",
       "armuwadves": "加强电力储存",
       "armuwadvms": "加强金属储存",
       "armuwes": "水下电力储存",
@@ -439,17 +439,17 @@
       "corcv": "工程车",
       "cordecom": "指挥官",
       "cordemon": "恶魔",
-      "cordeadeye": "死眼",
-      "cordesolator": "Desolator",
+      "cordeadeye": "死亡之眼",
+      "cordesolator": "黯灭",
       "cordl": "海蜇",
       "cordoom": "末日机器",
       "cordoomt3": "史诗级末日机器",
       "cordrag": "龙牙",
       "cordrone": "攻击无人机",
-      "cordronecarry": "Disperser",
-      "cordronecarryair": "Disperser Omni",
+      "cordronecarry": "分散者",
+      "cordronecarryair": "分散者(飞行器版本)",
       "cordroneold": "攻击无人机",
-      "cords": "Disgruntler",
+      "cords": "不满者",
       "corenaa": "水上鸟弹",
       "corerad": "消灭者",
       "corestor": "电力储存",
@@ -473,13 +473,13 @@
       "corfmd": "领先者",
       "corfmine3": "重型水雷",
       "corfmkr": "水上电力转换器",
-      "corforge": "Forge",
+      "corforge": "锻炉",
       "corfort": "防御围墙",
       "corfrad": "水上雷达/声呐",
       "corfrock": "管理人",
       "corfrt": "弹弓",
-      "corfship": "Brimstone",
-      "corftiger": "Heat Tiger",
+      "corfship": "硫磺",
+      "corftiger": "热虎",
       "corfus": "聚变反应堆",
       "corgant": "实验性建造平台",
       "corgantuw": "实验性建造平台",
@@ -542,15 +542,15 @@
       "cornanotct2": "T2 纳米维修台",
       "cornanotc2plat": "T2 水上纳米维修台",
       "cornecro": "摸金校尉",
-      "coronager": "Onager",
+      "coronager": "弩炮",
       "corparrow": "毒箭",
-      "corphantom": "Phantom",
+      "corphantom": "幻影",
       "corplat": "水上飞机建造平台",
-      "corprinter": "Printer",
-      "corvac": "Printer",
+      "corprinter": "打印者",
+      "corvac": "打印者",
       "corpship": "激流",
       "corpt": "鲱鱼",
-      "corptl": "Urchin",
+      "corptl": "顽童",
       "corpun": "挑拨者",
       "corpyro": "炎魔",
       "corrad": "雷达",
@@ -570,18 +570,18 @@
       "corsd": "克星",
       "corseah": "天钩",
       "corseal": "鳄鱼",
-      "corsala": "Salamander",
+      "corsala": "蝾螈",
       "corseap": "季风",
       "corsent": "怒火",
       "corsentinel": "哨兵",
       "corsfig": "蝙蝠",
       "corsfig2": "蝙蝠",
-      "corsh": "打手",
+      "corsh": "暴徒",
       "corshad": "漩涡",
       "corshark": "捕食者",
       "corshiva": "湿婆神",
       "corshroud": "遮罩",
-      "corsiegebreaker": "Siegebreaker",
+      "corsiegebreaker": "破城者",
       "corsilo": "启示录",
       "corsjam": "幻影",
       "corsktl": "炸蛛",
@@ -600,7 +600,7 @@
       "cortarg": "瞄准辅助设施",
       "cortdrone": "深水炸弹无人机",
       "cortermite": "白蚁",
-      "corthermite": "Thermite",
+      "corthermite": "铝热剂",
       "corthovr": "大篷车",
       "corthud": "暴徒",
       "cortide": "浪涌发电机",
@@ -642,7 +642,7 @@
       "critter_penguinking": "企鹅王",
       "dbg_sphere_fullmetal": "dbg_sphere",
       "dbg_sphere": "dbg_sphere",
-      "dice": "色子",
+      "dice": "骰子",
       "raptor_queen_easy": "外星大虾女王(简单)",
       "raptor_queen_epic": "外星大虾女王(史诗)",
       "freefusion": "自由聚变反应堆",
@@ -651,6 +651,7 @@
       "cor_hat_hornet": "黄蜂的三角帽",
       "cor_hat_ptaq": "PtaQ的帽子",
       "cor_hat_fightnight": "#1 大兵",
+      "cor_hat_legfn": "#1 哥布林",
       "legeyes": "阿尔戈斯",
       "leegmech": "近卫军",
       "legaceb": "普罗透斯",
