revise ZH tips files
revise ZH tips files

--- a/language/zh/tips.json
+++ b/language/zh/tips.json
@@ -1,7 +1,7 @@
 {
   "tips": {
     "loadscreen": {
-      "donations": "Good news! BAR is accepting donations again!\nbeyondallreason.info/donate",
+      "donations": "好消息！BAR现在再次接受捐赠\nbeyondallreason.info/donate",
       "alwaysExpand": "扩大领土是获得经济优势的关键。\n尽可能多地保护金属点和地热通风口。",
       "armyDiversity": "提前考虑并在你的军队中加入防空和支援部队。",
       "assistFactories": "用工程单位来支援工厂是很有效的,可以增加其建造能力。\n选择工程单位,右键单击工厂来支援它。",
@@ -62,22 +62,22 @@
     "notifications": {
       "enemyCommanderDied": "一名敌方指挥官已被歼灭!",
       "friendlyCommanderDied": "一名我方指挥官已经阵亡!",
-      "friendlyCommanderSelfD": "An allied commander self-destructed",
+      "friendlyCommanderSelfD": "一名我方指挥官自爆了!",
       "comHeavyDamage": "你的指挥官正受到成吨的伤害!",
       "teamDownLastCommander": "警告:你的队伍只剩下最后一名指挥官了。",
-      "youHaveLastCommander": "警告:你的指挥官是最后一名。",
+      "youHaveLastCommander": "警告:你的指挥官是队伍最后一人",
       "chooseStartLoc": "选择你的出生点",
       "gameStarted": "已开始",
-      "battleEnded": "Battle ended",
+      "battleEnded": "战斗结束",
       "gamePaused": "已暂停",
-      "gameUnpaused": "Unpaused",
-      "playerDisconnected": "一名玩家已经离开了游戏",
+      "gameUnpaused": "取消暂停",
+      "playerDisconnected": "一名玩家离开了游戏",
       "playerAdded": "一位玩家加入了游戏",
-      "playerResigned": "A player has resigned",
-      "playerReconnecting": "A player is reconnecting",
-      "playerTimedout": "A player has timed out",
-      "raptorsAndScavsMixed": "WARNING! You have loaded Raptors and Scavengers at the same time. These two gamemodes are incompatible with each other. Please leave the match and select only one of these AIs. Thank you for your understanding.",
-      "maxUnitsReached": "You've reached the max unit cap",
+      "playerResigned": "一位玩家投降了",
+      "playerReconnecting": "一位玩家正在重连",
+      "playerTimedout": "一位玩家超时断连了",
+      "raptorsAndScavsMixed": "警告！您同时启动了Raptors(打虫模式)和Scavs(清道夫模式)。这两种游戏模式彼此不兼容。请退出比赛，只能选择其中一个AI。谢谢你的理解",
+      "maxUnitsReached": "注意：你已经到达了人口上限",
       "unitsReceived": "你接收了新的单位",
       "metalExtractorLost": "金属提炼器被毁",
       "radarLost": "雷达被毁",
@@ -102,9 +102,9 @@
       "tacticalNukeSiloDetected": "侦测到敌方战术核弹发射井!",
       "nuclearSiloDetected": "侦测到敌方核弹发射井!",
       "nuclearBomberDetected": "侦测到敌方核轰炸机!",
-      "behemothDetected": "Behemoth detected",
-      "juggernautDetected": "Juggernaut detected",
-      "titanDetected": "Titan detected",
+      "behemothDetected": "侦测到主宰",
+      "juggernautDetected": "侦测到野蛮人科尔戈斯",
+      "titanDetected": "侦测到泰坦",
       "flagshipDetected": "侦测到敌方旗舰",
       "commandoDetected": "侦测到敌方指挥官",
       "transportDetected": "定位到敌方运输单位",
