change word spider>insectoid

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1069,8 +1069,8 @@
 			"armsnipe": "Sniper Bot",
 			"armsolar": "Produces 20 Energy",
 			"armsonar": "Locates Water Units",
-			"armspid": "All-Terrain EMP and Reclaiming Spider",
-			"armsptk": "All-Terrain Rocket Spider",
+			"armspid": "All-Terrain EMP and Reclaiming Insectoid",
+			"armsptk": "All-Terrain Rocket Insectoid",
 			"armsptkt4": "Recluse, but bigger.",
 			"armspy": "Radar-Invisible Spy Bot",
 			"armstil": "EMP Bomber",
@@ -1445,8 +1445,8 @@
 			"corsy": "Produces Tech 1 Ships",
 			"cortarg": "Enhanced Radar Targeting, more facilities enhance accuracy",
 			"cortdrone": "Drops Depth Charges",
-			"cortermite": "Heavy All-terrain Assault Spider",
-			"corthermite": "Very Heavy All-terrain Pyrotechnics Spider",
+			"cortermite": "Heavy All-terrain Assault Insectoid",
+			"corthermite": "Very Heavy All-terrain Pyrotechnics Insectoid",
 			"corthovr": "Heavy Transport Hovercraft",
 			"corthud": "Light Plasma Bot",
 			"cortide": "Produces Energy (depends on map)",
@@ -1579,7 +1579,7 @@
 			"leghp": "Builds Hovercraft",
 			"leginc": "(barely) Mobile Heavy Heat Ray",
 			"leginf": "Napalm Gatling Artillery",
-			"leginfestor": "Infesting Spider Assault Bot",
+			"leginfestor": "Infesting Insectoid Assault Bot",
 			"legionnaire": "Defensive Fighter",
 			"legkam": "Self-destructs to deal explosive damage to target area",
 			"legkark": "Medium Dual-Weapon Infantry Bot",
