fix ZH features file translation
fix ZH interface file translation

--- a/language/zh/features.json
+++ b/language/zh/features.json
@@ -23,7 +23,7 @@
             "geocrack": "通风管道的可见裂缝",
             "geovent": "地热通风口",
             "heap": "碎片",
-            "metal": "含有金属",
+            "metal": "金属",
             "mushroomsOrange": "橙色蘑菇",
             "mushroomsTan": "檀香菇",
             "mushroomsPurple": "紫色蘑菇",
@@ -43,9 +43,9 @@
             "industrial_structure_pipes_1": "建筑管线",
             "pressurevalve": "压力阀",
             "radardish_1": "卫星天线",
-            "regulatorcomplex": "调节器综合体",
+            "regulatorcomplex": "综合调节器",
             "seismicmonitor": "地震监测仪",
-            "thermalregulator": "热调节器",
+            "thermalregulator": "热量调节器",
             "pthornclump": "一种非常干燥和易碎的植物",
             "rock": "岩石",
             "rockBarren": "光秃的岩石",
