--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1630,7 +1630,7 @@
 			"legsrail": "All-Terrain Heavy Railgun",
 			"legstr": "Fast Raider Bot",
 			"legstingray": "Assault Submarine",
-			"legstronghold": "Gunship / Heavy Transport",
+			"legstronghold": "Armed Transport",
 			"legstarfall": "Long range plasma launcher (360k energy per volley)",
 			"legtide": "Produces Energy (depends on map)",
 			"legtl": "Offshore Torpedo Launcher",
