--- a/language/en/units.json
+++ b/language/en/units.json
@@ -253,6 +253,7 @@
 			"armuwmmm": "Naval Advanced Energy Converter",
 			"armuwms": "Naval Metal Storage",
 			"armvader": "Tumbleweed",
+			"armvader2": "Tumbleweed",
 			"armvadert4": "Epic Tumbleweed",
 			"armvang": "Vanguard",
 			"armveil": "Veil",
@@ -559,6 +560,7 @@
 			"correcl": "Death Cavalry",
 			"corrl": "Thistle",
 			"corroach": "Bedbug",
+			"corroach2": "Bedbug",
 			"corroy": "Oppressor",
 			"corsb": "Dam Buster",
 			"corscavdrag": "Dragon's Teeth",
@@ -585,6 +587,7 @@
 			"corsilo": "Apocalypse",
 			"corsjam": "Phantasm",
 			"corsktl": "Skuttle",
+			"corsktl2": "Skuttle",
 			"corslrpc": "Basilisk Ship",
 			"corsnap": "Cayman",
 			"corsok": "Cataphract",
@@ -1100,6 +1103,7 @@
 			"armuwmmm": "Converts 600 energy into 10.3 metal per sec",
 			"armuwms": "Increases Metal Storage (3000)",
 			"armvader": "Amphibious Rolling Bomb",
+			"armvader2": "Amphibious Rolling Bomb",
 			"armvadert4": "So it's a ball with nuke warhead inside",
 			"armvang": "All-Terrain Heavy Plasma Cannon",
 			"armveil": "Long-Range Jamming Tower",
@@ -1407,6 +1411,7 @@
 			"correcl": "Resurrection Sub",
 			"corrl": "Light Anti-air Tower",
 			"corroach": "Amphibious Crawling Bomb",
+			"corroach2": "Amphibious Crawling Bomb",
 			"corroy": "Destroyer",
 			"corsb": "Seaplane Bomber",
 			"corscavdrag": "Fortification",
@@ -1433,6 +1438,7 @@
 			"corsilo": "Nuclear ICBM Launcher",
 			"corsjam": "Radar Jammer Ship",
 			"corsktl": "Advanced Amphibious Crawling Bomb",
+			"corsktl2": "Advanced Amphibious Crawling Bomb",
 			"corslrpc": "Long Range Plasma Cannon Ship",
 			"corsnap": "Hovertank",
 			"corsok": "Heavy Laser Hovertank",
