Remove references to "bomb2" unitdefs

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -119,7 +119,6 @@
 			"armfhp": "Naval Hovercraft Platform",
 			"armfido": "Hound",
 			"armfig": "Falcon",
-			"armfify":"Firefly",
 			"armflak": "Arbalest",
 			"armflash": "Blitz",
 			"armflea": "Tick",
@@ -254,7 +253,6 @@
 			"armuwmmm": "Naval Advanced Energy Converter",
 			"armuwms": "Naval Metal Storage",
 			"armvader": "Tumbleweed",
-			"armvader2": "Tumbleweed",
 			"armvadert4": "Epic Tumbleweed",
 			"armvang": "Vanguard",
 			"armveil": "Veil",
@@ -561,7 +559,6 @@
 			"correcl": "Death Cavalry",
 			"corrl": "Thistle",
 			"corroach": "Bedbug",
-			"corroach2": "Bedbug",
 			"corroy": "Oppressor",
 			"corsb": "Dam Buster",
 			"corscavdrag": "Dragon's Teeth",
@@ -588,7 +585,6 @@
 			"corsilo": "Apocalypse",
 			"corsjam": "Phantasm",
 			"corsktl": "Skuttle",
-			"corsktl2": "Skuttle",
 			"corslrpc": "Basilisk Ship",
 			"corsnap": "Cayman",
 			"corsok": "Cataphract",
@@ -734,7 +730,6 @@
 			"legsnapper": "Snapper",
 			"legjim": "Shipyard",
 			"leggob": "Goblin",
-			"leggobt3": "Epic Goblin",
 			"leghades": "Alaris",
 			"leghastatus": "Hastatus",
 			"leghastatusalt": "Hastatus",
@@ -765,7 +760,6 @@
 			"legmineb": "Harbinger",
 			"legministarfall": "Mini Starfall",
 			"legmos": "Mosquito",
-			"legmost3": "Epic Mosquito",
 			"legmrv": "Quickshot",
 			"legnap": "Wildfire",
 			"legner": "Nereus",
@@ -786,7 +780,6 @@
 			"legaheattank": "Prometheus",
 			"legshot": "Phalanx",
 			"legsrail": "Arquebus",
-			"legsrailt4": "Epic Arquebus",
 			"legstr": "Strider",
 			"legstingray":"Stingray",
 			"legstronghold": "Stronghold",
@@ -863,8 +856,7 @@
 			"legnanotct2plat": "T2 Naval Construction Turret",
 			"legnanotcbase": "Base Builder",
 			"legrampart": "Rampart",
-			"legabm": "Aegis",
-			"legrwall": "Dragon's Constitution"
+			"legabm": "Aegis"
 		},
 		"descriptions": {
 			"armaak": "Advanced Amphibious Anti-Air Bot",
@@ -973,7 +965,6 @@
 			"armfhp": "Builds Hovercraft",
 			"armfido": "Mortar / Skirmish Bot",
 			"armfig": "Fighter",
-			"armfify": "Stealthy Rez / Repair / Reclaim Aicraft",
 			"armflak": "Anti-Air Flak Gun",
 			"armflash": "Fast Assault Tank",
 			"armflea": "Fast Scout Bot",
@@ -1109,7 +1100,6 @@
 			"armuwmmm": "Converts 600 energy into 10.3 metal per sec",
 			"armuwms": "Increases Metal Storage (3000)",
 			"armvader": "Amphibious Rolling Bomb",
-			"armvader2": "Amphibious Rolling Bomb",
 			"armvadert4": "So it's a ball with nuke warhead inside",
 			"armvang": "All-Terrain Heavy Plasma Cannon",
 			"armveil": "Long-Range Jamming Tower",
@@ -1417,7 +1407,6 @@
 			"correcl": "Resurrection Sub",
 			"corrl": "Light Anti-air Tower",
 			"corroach": "Amphibious Crawling Bomb",
-			"corroach2": "Amphibious Crawling Bomb",
 			"corroy": "Destroyer",
 			"corsb": "Seaplane Bomber",
 			"corscavdrag": "Fortification",
@@ -1444,7 +1433,6 @@
 			"corsilo": "Nuclear ICBM Launcher",
 			"corsjam": "Radar Jammer Ship",
 			"corsktl": "Advanced Amphibious Crawling Bomb",
-			"corsktl2": "Advanced Amphibious Crawling Bomb",
 			"corslrpc": "Long Range Plasma Cannon Ship",
 			"corsnap": "Hovertank",
 			"corsok": "Heavy Laser Hovertank",
@@ -1588,7 +1576,6 @@
 			"legsnapper": "Amphibious Screwdrive Bomb",
 			"legjim": "Produces Tech 1 Ships",
 			"leggob": "Light Skirmish Bot",
-			"leggobt3": "Heavy Skirmish Bot",
 			"leghades": "Fast Assault Tank",
 			"leghastatus": "Assault Frigate",
 			"leghastatusalt": "Assault Frigate",
@@ -1620,7 +1607,6 @@
 			"legmineb": "Deploys Clusters of Light Mines onto Target Area",
 			"legministarfall": "Clockwork Starfall; 'Armageddon, but you're on a budget'",
 			"legmos": "Light Gunship with Stockpiling Rockets",
-			"legmost3": "Heavy Gunship with Burst Fire Stockpiling Rockets",
 			"legmrv": "Fast Burst-Fire Raiding Vehicle",
 			"legnap": "Drops Napalm onto a Large Area",
 			"legner": "Hovertank",
@@ -1642,7 +1628,6 @@
 			"legavroc": "Stealthy Mobile Rocket Launcher",
 			"legshot": "Shielded Assault Bot",
 			"legsrail": "All-Terrain Heavy Railgun",
-			"legsrailt4": "All-Terrain Heavy Railgun",
 			"legstr": "Fast Raider Bot",
 			"legstingray": "Assault Submarine",
 			"legstronghold": "Gunship / Heavy Transport",
@@ -1722,8 +1707,7 @@
 			"legnanotct2plat": "Assist & Repair in larger radius",
 			"legnanotcbase": "Assist & Repair in massive radius",
 			"legrampart": "Geothermal Antinuke, Jammer, Radar and Drone Platform",
-			"legabm": "Anti-Nuke System",
-			"legrwall": "Railgun Defense Wall"
+			"legabm": "Anti-Nuke System"
 		}
 	}
 }
