Feature: Show target player name in Share Unit command (#3930)
- rename locals as in code convention
- change version to 1.0
- use string interpolation inside the translation
- move aoe circle a bit higher, so it doesn't clip so much

--- a/language/en/interface.json
+++ b/language/en/interface.json
@@ -1668,9 +1668,9 @@
 				"description": "%{role1}\n\nand/or\n\n%{role2}"
 			}
 		},
-		"quicksharetotarget": {
+		"quickShareToTarget": {
 			"noTarget": "No target selected",
-			"shareTo": "Share to:"
+			"shareTo": "Share to: %{playerColor}%{player}"
 		}
 	}
 }
