--- a/language/en/units.json
+++ b/language/en/units.json
@@ -131,7 +131,7 @@
 			"armfrt": "Naval Nettle",
 			"armfus": "Fusion Reactor",
 			"armgate": "Keeper",
-			"armgatet3": "Conservator",
+			"armgatet3": "Asylum",
 			"armgeo": "Geothermal Powerplant",
 			"armuwgeo": "Geothermal Powerplant",
 			"armgmm": "Prude",
@@ -487,7 +487,7 @@
 			"corgantuw": "Experimental Gantry",
 			"corgarp": "Garpike",
 			"corgate": "Overseer",
-			"corgatet3": "Overlord",
+			"corgatet3": "Sanctuary",
 			"corgator": "Incisor",
 			"corgatreap": "Laser Tiger",
 			"corgeo": "Geothermal Powerplant",
