--- a/language/ru/interface.json
+++ b/language/ru/interface.json
@@ -884,7 +884,11 @@
 			"eneededforconversion": "Э необходимая для преобразования",
 			"convertedm": "конвертируемая M",
 			"estorage": "вместимость Э",
-			"mstorage": "вместимость М"
+			"mstorage": "вместимость М",
+			"shieldcapacity": "Ёмкость щита",
+			"shieldrange": "Дальность щита",
+			"shieldrechargerate": "Скорость перезарядки",
+			"shieldrechargecost": "Стоимость перезарядки"
 		},
 		"spectator_hud": {
 			"metalIncome_title": "Доход Металла",
