--- a/language/en/units.json
+++ b/language/en/units.json
@@ -786,6 +786,8 @@
 			"legsolar": "Solar Collector",
 			"legaskirmtank": "Gladiator",
 			"legavroc": "Boreas",
+			"legavjam": "Calypso",
+			"legavrad": "Zeteo",
 			"legaheattank": "Prometheus",
 			"legshot": "Phalanx",
 			"legsrail": "Arquebus",
@@ -1647,6 +1649,8 @@
 			"legaheattank": "Heavy Assault Heatray Tank",
 			"legaskirmtank": "Medium Burst-Fire Skirmisher Tank",
 			"legavroc": "Stealthy Mobile Rocket Launcher",
+			"legavjam": "Radar Jammer Vehicle",
+			"legavrad": "Radar Vehicle",
 			"legshot": "Shielded Assault Bot",
 			"legsrail": "All-Terrain Heavy Railgun",
 			"legsrailt4": "All-Terrain Heavy Railgun",
